:lipstick: fix date wrap

--- a/components/Track/track.module.css
+++ b/components/Track/track.module.css
@@ -9,7 +9,7 @@
   display: grid;
   font-size: 16px;
   gap: 5px;
-  grid-template-columns: 40px auto 1fr 100px auto;
+  grid-template-columns: 40px auto 1fr 100px 170px;
   margin: 0;
   outline: none;
   padding: var(--space-medium) var(--space-large) var(--space-medium) var(--space-medium);
